--- a/tasks/repo.yml
+++ b/tasks/repo.yml
@@ -1,10 +1,4 @@
 ---
-  # TODO: This can be removed once focal is officially supported
-- name: Include release specific variables
-  include_vars: ubuntu-focal.yml
-  when:
-    ansible_distribution_release == 'focal'
-
 - name: Add apt gpg key
   apt_key:
     url: '{{ deconz_gpg_url }}'
@@ -13,6 +7,6 @@
 
 - name: Add apt repository
   apt_repository:
-    repo: 'deb [arch=amd64] {{ deconz_repo_url }} {{ deconz_repo_distribution }} main'
+    repo: '{{ deconz_repo_url_full }}'
     update_cache: true
     filename: deconz.list
